Fixed navbar in mobile view and added some alignments

--- a/src/components/Favorites/FavoriteNotes.module.css
+++ b/src/components/Favorites/FavoriteNotes.module.css
@@ -11,6 +11,7 @@
     color: black;
     animation-name: example;
     animation-duration: 4s;
+    margin-top: 100px;
 }
 
 @media (min-width: 240px) and (max-width: 768px) {
