--- a/src/components/Layout/MainNavigation.module.css
+++ b/src/components/Layout/MainNavigation.module.css
@@ -24,9 +24,9 @@
 }
 
 .logoLink {
-    height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .logoLink a{
@@ -105,6 +105,14 @@
 @media (min-width: 240px) and (max-width: 768px) {
     .header{
         width: 100vw;
+        height: 10vh;
+        flex-direction: column;
+    }
+
+    .leftSideContainer{
+    }
+
+    .logoLink{
         height: 10vh;
     }
 
